# fairness-tales-workshop

./: .gitignore  .pre-commit-config.yaml  .venv  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: constraints.txt  main.yaml  requirements.in  requirements.txt
data/output/: resumes-400.feather
docs/: project_specific_setup.md  quickstart.md  using_poetry.md
notebooks/: 1 - Generate CVs.ipynb  1 - Generate CVs.py  2 - Model.ipynb  2 - Model.py
tests/: test_fairness_tales_workshop.py
