[project]
name = "fairness_tales_workshop"
version = "0.1.0"
description = "Fairness Tales: How To Measure And Mitigate Unfair Bias in Machine Learning Models"
authors = [
  { name = "John Sandall", email = "contact@coefficient.ai" },
]
license = { text = "UNLICENSED" }
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12, <4.0"
dependencies = [
  "fairlearn>=0.11.0,<0.12.0",
  "joblib>=1.4.2,<2.0.0",
  "jupyter-black>=0.4.0,<0.5.0",
  "jupyterlab>=4.3.1,<5.0.0",
  "lightgbm>=4.5.0,<5.0.0",
  "matplotlib>=3.9.3,<4.0.0",
  "numpy>=2.1.3,<3.0.0",
  "openai>=1.56.0,<2.0.0",
  "pandas>=2.2.3,<3.0.0",
  "pickleshare>=0.7.5,<0.8.0",
  "pyarrow>=18.1.0,<19.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "scikit-learn>=1.5.2,<2.0.0",
  "seaborn>=0.13.2,<0.14.0",
  "tabulate>=0.9.0,<0.10.0",
  "xgboost>=2.1.3,<3.0.0",
  "jupytext>=1.16.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "ipdb>=0.13.13,<0.14.0",
  "pip-audit>=2.7.3,<3.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=7.4.4,<8.0.0",
  "ruff>=0.1.14,<0.2.0",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
package-mode = false

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ARG",
  "B",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FIX",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "NPY",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
]
fixable = ["ALL"]
ignore = [
  "ARG001",
  "B018",
  "D401",
  "D100",
  "D103",
  "E501",
  "ERA001",
  "INP001",
  "NPY002",
  "PD901",
  "PERF401",
  "PTH123",
  "RET503",
  "SIM108",
  "T201",
  "TRY201",
]

[tool.ruff.per-file-ignores]
"notebooks/1 - Generate CVs.ipynb" = ["PLE0704"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
